p2_try/y.output
Terminals unused in grammar

    T_Increm
    T_Decrem
    T_Switch
    T_Case
    T_Default


State 30 conflicts: 6 shift/reduce
State 69 conflicts: 1 shift/reduce
State 76 conflicts: 22 shift/reduce
State 92 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce
State 138 conflicts: 15 shift/reduce
State 139 conflicts: 15 shift/reduce
State 163 conflicts: 1 shift/reduce
State 169 conflicts: 15 shift/reduce
State 170 conflicts: 15 shift/reduce
State 171 conflicts: 15 shift/reduce
State 172 conflicts: 15 shift/reduce
State 173 conflicts: 15 shift/reduce
State 174 conflicts: 15 shift/reduce
State 175 conflicts: 1 shift/reduce
State 177 conflicts: 15 shift/reduce
State 178 conflicts: 15 shift/reduce
State 179 conflicts: 15 shift/reduce
State 180 conflicts: 15 shift/reduce
State 181 conflicts: 15 shift/reduce
State 182 conflicts: 15 shift/reduce
State 183 conflicts: 15 shift/reduce
State 184 conflicts: 15 shift/reduce
State 185 conflicts: 21 shift/reduce
State 187 conflicts: 21 shift/reduce
State 191 conflicts: 1 shift/reduce
State 197 conflicts: 1 shift/reduce
State 202 conflicts: 21 shift/reduce
State 207 conflicts: 21 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl
    5     | FnDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VarDecl: Var ';'

    9 Var: Type T_Identifier ';'

   10 Type: T_Int
   11     | T_Double
   12     | T_Bool
   13     | T_String
   14     | T_Identifier
   15     | Type T_Dims

   16 FnDecl: T_Void T_Identifier '(' Formals ')' StmtBlock
   17       | Type T_Identifier '(' Formals ')' StmtBlock

   18 Formals: VarList
   19        | %empty

   20 VarList: VarList ',' Var
   21        | Var

   22 ClassDecl: T_Class T_Identifier '{' FieldList '}'
   23          | T_Class T_Identifier T_Extends T_Identifier '{' FieldList '}'
   24          | T_Class T_Identifier T_Implements IdentifierList '{' FieldList '}'
   25          | T_Class T_Identifier T_Extends T_Identifier T_Implements IdentifierList '{' FieldList '}'

   26 IdentifierList: IdentifierList ',' T_Identifier
   27               | T_Identifier

   28 FieldList: %empty
   29          | FieldList Field

   30 Field: VarDecl
   31      | FnDecl

   32 InterfaceDecl: T_Interface T_Identifier ProtoTypeList

   33 ProtoTypeList: %empty
   34              | ProtoTypeList ProtoType

   35 ProtoType: Type T_Identifier '(' Formals ')' ';'
   36          | T_Void T_Identifier '(' Formals ')' ';'

   37 StmtBlock: '{' VarDeclList StmtList '}'

   38 VarDeclList: %empty
   39            | VarDeclList VarDecl

   40 StmtList: %empty
   41         | StmtList Stmt

   42 Stmt: ExprBrack
   43     | IfStmt
   44     | ForStmt
   45     | WhileStmt
   46     | ReturnStmt
   47     | BreakStmt
   48     | PrintStmt
   49     | StmtBlock

   50 ExprBrack: %empty
   51          | Expr

   52 IfStmt: T_If '(' Expr ')' Stmt
   53       | T_If '(' Expr ')' Stmt T_Else Stmt

   54 ForStmt: T_For '(' ExprBrack ';' Expr ';' ExprBrack ')' Stmt

   55 WhileStmt: T_While '(' Expr ')' Stmt

   56 ReturnStmt: T_Return ExprBrack ';'

   57 BreakStmt: T_Break ';'

   58 PrintStmt: T_Print '(' ExprList ')' ';'

   59 ExprList: ExprList Expr
   60         | Expr

   61 Expr: LValue
   62     | Constant
   63     | T_This
   64     | Call
   65     | '(' Expr ')'
   66     | AssignExpr
   67     | LogicalExpr
   68     | EqualityExpr
   69     | ArithmeticExpr
   70     | RelationalExpr
   71     | ReadIntegerExpr
   72     | ReadLineExpr
   73     | NewExpr
   74     | NewArrayExpr

   75 LValue: T_Identifier
   76       | Expr '.' T_Identifier
   77       | Expr '[' Expr ']'

   78 Constant: T_IntConstant
   79         | T_DoubleConstant
   80         | T_BoolConstant
   81         | T_StringConstant
   82         | T_Null

   83 Call: T_Identifier '(' Actuals ')'
   84     | Expr '.' T_Identifier '(' Actuals ')'

   85 Actuals: ExprList
   86        | %empty

   87 AssignExpr: LValue '=' Expr

   88 LogicalExpr: Expr T_And Expr
   89            | Expr T_Or Expr
   90            | '!' Expr

   91 EqualityExpr: Expr T_Equal Expr
   92             | Expr T_NotEqual Expr

   93 ArithmeticExpr: Expr '+' Expr
   94               | Expr '-' Expr
   95               | Expr '*' Expr
   96               | Expr '/' Expr
   97               | Expr '%' Expr
   98               | '-' Expr

   99 RelationalExpr: Expr T_LessEqual Expr
  100               | Expr '<' Expr
  101               | Expr T_GreaterEqual Expr
  102               | Expr '>' Expr

  103 ReadIntegerExpr: T_ReadInteger '(' ')'

  104 ReadLineExpr: T_ReadLine '(' ')'

  105 NewExpr: T_New '(' T_Identifier ')'

  106 NewArrayExpr: T_NewArray '(' Expr ',' Type ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 90
    '%' (37) 97
    '(' (40) 16 17 35 36 52 53 54 55 58 65 83 84 103 104 105 106
    ')' (41) 16 17 35 36 52 53 54 55 58 65 83 84 103 104 105 106
    '*' (42) 95
    '+' (43) 93
    ',' (44) 20 26 106
    '-' (45) 94 98
    '.' (46) 76 84
    '/' (47) 96
    ';' (59) 8 9 35 36 54 56 57 58
    '<' (60) 100
    '=' (61) 87
    '>' (62) 102
    '[' (91) 77
    ']' (93) 77
    '{' (123) 22 23 24 25 37
    '}' (125) 22 23 24 25 37
    error (256)
    T_Void (258) 16 36
    T_Bool (259) 12
    T_Int (260) 10
    T_Double (261) 11
    T_String (262) 13
    T_Class (263) 22 23 24 25
    T_LessEqual (264) 99
    T_GreaterEqual (265) 101
    T_Equal (266) 91
    T_NotEqual (267) 92
    T_Dims (268) 15
    T_And (269) 88
    T_Or (270) 89
    T_Null (271) 82
    T_Extends (272) 23 25
    T_This (273) 63
    T_Interface (274) 32
    T_Implements (275) 24 25
    T_While (276) 55
    T_For (277) 54
    T_If (278) 52 53
    T_Else (279) 53
    T_Return (280) 56
    T_Break (281) 57
    T_New (282) 105
    T_NewArray (283) 106
    T_Print (284) 58
    T_ReadInteger (285) 103
    T_ReadLine (286) 104
    T_Identifier <identifier> (287) 9 14 16 17 22 23 24 25 26 27 32 35 36 75 76 83 84 105
    T_StringConstant <stringConstant> (288) 81
    T_IntConstant <integerConstant> (289) 78
    T_DoubleConstant <doubleConstant> (290) 79
    T_BoolConstant <boolConstant> (291) 80
    T_Increm (292)
    T_Decrem (293)
    T_Switch (294)
    T_Case (295)
    T_Default (296)


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    Program <program> (61)
        on left: 1
        on right: 0
    DeclList <declList> (62)
        on left: 2 3
        on right: 1 2
    Decl <decl> (63)
        on left: 4 5 6 7
        on right: 2 3
    VarDecl <vardecl> (64)
        on left: 8
        on right: 4 30 39
    Var <var> (65)
        on left: 9
        on right: 8 20 21
    Type <type> (66)
        on left: 10 11 12 13 14 15
        on right: 9 15 17 35 106
    FnDecl <fndecl> (67)
        on left: 16 17
        on right: 5 31
    Formals <varList> (68)
        on left: 18 19
        on right: 16 17 35 36
    VarList <varList> (69)
        on left: 20 21
        on right: 18 20
    ClassDecl <classdecl> (70)
        on left: 22 23 24 25
        on right: 6
    IdentifierList <identifierlist> (71)
        on left: 26 27
        on right: 24 25 26
    FieldList <declList> (72)
        on left: 28 29
        on right: 22 23 24 25 29
    Field <decl> (73)
        on left: 30 31
        on right: 29
    InterfaceDecl <interfacedecl> (74)
        on left: 32
        on right: 7
    ProtoTypeList <declList> (75)
        on left: 33 34
        on right: 32 34
    ProtoType <decl> (76)
        on left: 35 36
        on right: 34
    StmtBlock <stmtblock> (77)
        on left: 37
        on right: 16 17 49
    VarDeclList <varList> (78)
        on left: 38 39
        on right: 37 39
    StmtList <stmtList> (79)
        on left: 40 41
        on right: 37 41
    Stmt <stmt> (80)
        on left: 42 43 44 45 46 47 48 49
        on right: 41 52 53 54 55
    ExprBrack <expr> (81)
        on left: 50 51
        on right: 42 54 56
    IfStmt <ifstmt> (82)
        on left: 52 53
        on right: 43
    ForStmt <forstmt> (83)
        on left: 54
        on right: 44
    WhileStmt <whilestmt> (84)
        on left: 55
        on right: 45
    ReturnStmt <returnstmt> (85)
        on left: 56
        on right: 46
    BreakStmt <breakstmt> (86)
        on left: 57
        on right: 47
    PrintStmt <printstmt> (87)
        on left: 58
        on right: 48
    ExprList <exprList> (88)
        on left: 59 60
        on right: 58 59 85
    Expr <expr> (89)
        on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74
        on right: 51 52 53 54 55 59 60 65 76 77 84 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 106
    LValue <lvalue> (90)
        on left: 75 76 77
        on right: 61 87
    Constant <expr> (91)
        on left: 78 79 80 81 82
        on right: 62
    Call <call> (92)
        on left: 83 84
        on right: 64
    Actuals <exprList> (93)
        on left: 85 86
        on right: 83 84
    AssignExpr <assignexpr> (94)
        on left: 87
        on right: 66
    LogicalExpr <logicalexpr> (95)
        on left: 88 89 90
        on right: 67
    EqualityExpr <equalityexpr> (96)
        on left: 91 92
        on right: 68
    ArithmeticExpr <arithmeticexpr> (97)
        on left: 93 94 95 96 97 98
        on right: 69
    RelationalExpr <relationalexpr> (98)
        on left: 99 100 101 102
        on right: 70
    ReadIntegerExpr <readintegerexpr> (99)
        on left: 103
        on right: 71
    ReadLineExpr <readlineexpr> (100)
        on left: 104
        on right: 72
    NewExpr <newexpr> (101)
        on left: 105
        on right: 73
    NewArrayExpr <newarrayexpr> (102)
        on left: 106
        on right: 74


State 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    VarDecl        go to state 12
    Var            go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    ClassDecl      go to state 16
    InterfaceDecl  go to state 17


State 1

   16 FnDecl: T_Void . T_Identifier '(' Formals ')' StmtBlock

    T_Identifier  shift, and go to state 18


State 2

   12 Type: T_Bool .

    $default  reduce using rule 12 (Type)


State 3

   10 Type: T_Int .

    $default  reduce using rule 10 (Type)


State 4

   11 Type: T_Double .

    $default  reduce using rule 11 (Type)


State 5

   13 Type: T_String .

    $default  reduce using rule 13 (Type)


State 6

   22 ClassDecl: T_Class . T_Identifier '{' FieldList '}'
   23          | T_Class . T_Identifier T_Extends T_Identifier '{' FieldList '}'
   24          | T_Class . T_Identifier T_Implements IdentifierList '{' FieldList '}'
   25          | T_Class . T_Identifier T_Extends T_Identifier T_Implements IdentifierList '{' FieldList '}'

    T_Identifier  shift, and go to state 19


State 7

   32 InterfaceDecl: T_Interface . T_Identifier ProtoTypeList

    T_Identifier  shift, and go to state 20


State 8

   14 Type: T_Identifier .

    $default  reduce using rule 14 (Type)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 21


State 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 22
    VarDecl        go to state 12
    Var            go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    ClassDecl      go to state 16
    InterfaceDecl  go to state 17


State 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 12

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


State 13

    8 VarDecl: Var . ';'

    ';'  shift, and go to state 23


State 14

    9 Var: Type . T_Identifier ';'
   15 Type: Type . T_Dims
   17 FnDecl: Type . T_Identifier '(' Formals ')' StmtBlock

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 25


State 15

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


State 16

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


State 17

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


State 18

   16 FnDecl: T_Void T_Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 26


State 19

   22 ClassDecl: T_Class T_Identifier . '{' FieldList '}'
   23          | T_Class T_Identifier . T_Extends T_Identifier '{' FieldList '}'
   24          | T_Class T_Identifier . T_Implements IdentifierList '{' FieldList '}'
   25          | T_Class T_Identifier . T_Extends T_Identifier T_Implements IdentifierList '{' FieldList '}'

    T_Extends     shift, and go to state 27
    T_Implements  shift, and go to state 28
    '{'           shift, and go to state 29


State 20

   32 InterfaceDecl: T_Interface T_Identifier . ProtoTypeList

    $default  reduce using rule 33 (ProtoTypeList)

    ProtoTypeList  go to state 30


State 21

    0 $accept: Program $end .

    $default  accept


State 22

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 23

    8 VarDecl: Var ';' .

    $default  reduce using rule 8 (VarDecl)


State 24

   15 Type: Type T_Dims .

    $default  reduce using rule 15 (Type)


State 25

    9 Var: Type T_Identifier . ';'
   17 FnDecl: Type T_Identifier . '(' Formals ')' StmtBlock

    ';'  shift, and go to state 31
    '('  shift, and go to state 32


State 26

   16 FnDecl: T_Void T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Var      go to state 33
    Type     go to state 34
    Formals  go to state 35
    VarList  go to state 36


State 27

   23 ClassDecl: T_Class T_Identifier T_Extends . T_Identifier '{' FieldList '}'
   25          | T_Class T_Identifier T_Extends . T_Identifier T_Implements IdentifierList '{' FieldList '}'

    T_Identifier  shift, and go to state 37


State 28

   24 ClassDecl: T_Class T_Identifier T_Implements . IdentifierList '{' FieldList '}'

    T_Identifier  shift, and go to state 38

    IdentifierList  go to state 39


State 29

   22 ClassDecl: T_Class T_Identifier '{' . FieldList '}'

    $default  reduce using rule 28 (FieldList)

    FieldList  go to state 40


State 30

   32 InterfaceDecl: T_Interface T_Identifier ProtoTypeList .
   34 ProtoTypeList: ProtoTypeList . ProtoType

    T_Void        shift, and go to state 41
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    T_Void        [reduce using rule 32 (InterfaceDecl)]
    T_Bool        [reduce using rule 32 (InterfaceDecl)]
    T_Int         [reduce using rule 32 (InterfaceDecl)]
    T_Double      [reduce using rule 32 (InterfaceDecl)]
    T_String      [reduce using rule 32 (InterfaceDecl)]
    T_Identifier  [reduce using rule 32 (InterfaceDecl)]
    $default      reduce using rule 32 (InterfaceDecl)

    Type       go to state 42
    ProtoType  go to state 43


State 31

    9 Var: Type T_Identifier ';' .

    $default  reduce using rule 9 (Var)


State 32

   17 FnDecl: Type T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Var      go to state 33
    Type     go to state 34
    Formals  go to state 44
    VarList  go to state 36


State 33

   21 VarList: Var .

    $default  reduce using rule 21 (VarList)


State 34

    9 Var: Type . T_Identifier ';'
   15 Type: Type . T_Dims

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 45


State 35

   16 FnDecl: T_Void T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 46


State 36

   18 Formals: VarList .
   20 VarList: VarList . ',' Var

    ','  shift, and go to state 47

    $default  reduce using rule 18 (Formals)


State 37

   23 ClassDecl: T_Class T_Identifier T_Extends T_Identifier . '{' FieldList '}'
   25          | T_Class T_Identifier T_Extends T_Identifier . T_Implements IdentifierList '{' FieldList '}'

    T_Implements  shift, and go to state 48
    '{'           shift, and go to state 49


State 38

   27 IdentifierList: T_Identifier .

    $default  reduce using rule 27 (IdentifierList)


State 39

   24 ClassDecl: T_Class T_Identifier T_Implements IdentifierList . '{' FieldList '}'
   26 IdentifierList: IdentifierList . ',' T_Identifier

    ','  shift, and go to state 50
    '{'  shift, and go to state 51


State 40

   22 ClassDecl: T_Class T_Identifier '{' FieldList . '}'
   29 FieldList: FieldList . Field

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 52

    VarDecl  go to state 53
    Var      go to state 13
    Type     go to state 14
    FnDecl   go to state 54
    Field    go to state 55


State 41

   36 ProtoType: T_Void . T_Identifier '(' Formals ')' ';'

    T_Identifier  shift, and go to state 56


State 42

   15 Type: Type . T_Dims
   35 ProtoType: Type . T_Identifier '(' Formals ')' ';'

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 57


State 43

   34 ProtoTypeList: ProtoTypeList ProtoType .

    $default  reduce using rule 34 (ProtoTypeList)


State 44

   17 FnDecl: Type T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 58


State 45

    9 Var: Type T_Identifier . ';'

    ';'  shift, and go to state 31


State 46

   16 FnDecl: T_Void T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 59

    StmtBlock  go to state 60


State 47

   20 VarList: VarList ',' . Var

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Var   go to state 61
    Type  go to state 34


State 48

   25 ClassDecl: T_Class T_Identifier T_Extends T_Identifier T_Implements . IdentifierList '{' FieldList '}'

    T_Identifier  shift, and go to state 38

    IdentifierList  go to state 62


State 49

   23 ClassDecl: T_Class T_Identifier T_Extends T_Identifier '{' . FieldList '}'

    $default  reduce using rule 28 (FieldList)

    FieldList  go to state 63


State 50

   26 IdentifierList: IdentifierList ',' . T_Identifier

    T_Identifier  shift, and go to state 64


State 51

   24 ClassDecl: T_Class T_Identifier T_Implements IdentifierList '{' . FieldList '}'

    $default  reduce using rule 28 (FieldList)

    FieldList  go to state 65


State 52

   22 ClassDecl: T_Class T_Identifier '{' FieldList '}' .

    $default  reduce using rule 22 (ClassDecl)


State 53

   30 Field: VarDecl .

    $default  reduce using rule 30 (Field)


State 54

   31 Field: FnDecl .

    $default  reduce using rule 31 (Field)


State 55

   29 FieldList: FieldList Field .

    $default  reduce using rule 29 (FieldList)


State 56

   36 ProtoType: T_Void T_Identifier . '(' Formals ')' ';'

    '('  shift, and go to state 66


State 57

   35 ProtoType: Type T_Identifier . '(' Formals ')' ';'

    '('  shift, and go to state 67


State 58

   17 FnDecl: Type T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 59

    StmtBlock  go to state 68


State 59

   37 StmtBlock: '{' . VarDeclList StmtList '}'

    $default  reduce using rule 38 (VarDeclList)

    VarDeclList  go to state 69


State 60

   16 FnDecl: T_Void T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 16 (FnDecl)


State 61

   20 VarList: VarList ',' Var .

    $default  reduce using rule 20 (VarList)


State 62

   25 ClassDecl: T_Class T_Identifier T_Extends T_Identifier T_Implements IdentifierList . '{' FieldList '}'
   26 IdentifierList: IdentifierList . ',' T_Identifier

    ','  shift, and go to state 50
    '{'  shift, and go to state 70


State 63

   23 ClassDecl: T_Class T_Identifier T_Extends T_Identifier '{' FieldList . '}'
   29 FieldList: FieldList . Field

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 71

    VarDecl  go to state 53
    Var      go to state 13
    Type     go to state 14
    FnDecl   go to state 54
    Field    go to state 55


State 64

   26 IdentifierList: IdentifierList ',' T_Identifier .

    $default  reduce using rule 26 (IdentifierList)


State 65

   24 ClassDecl: T_Class T_Identifier T_Implements IdentifierList '{' FieldList . '}'
   29 FieldList: FieldList . Field

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 72

    VarDecl  go to state 53
    Var      go to state 13
    Type     go to state 14
    FnDecl   go to state 54
    Field    go to state 55


State 66

   36 ProtoType: T_Void T_Identifier '(' . Formals ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Var      go to state 33
    Type     go to state 34
    Formals  go to state 73
    VarList  go to state 36


State 67

   35 ProtoType: Type T_Identifier '(' . Formals ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Var      go to state 33
    Type     go to state 34
    Formals  go to state 74
    VarList  go to state 36


State 68

   17 FnDecl: Type T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 17 (FnDecl)


State 69

   37 StmtBlock: '{' VarDeclList . StmtList '}'
   39 VarDeclList: VarDeclList . VarDecl

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    T_Identifier  [reduce using rule 40 (StmtList)]
    $default      reduce using rule 40 (StmtList)

    VarDecl   go to state 75
    Var       go to state 13
    Type      go to state 34
    StmtList  go to state 76


State 70

   25 ClassDecl: T_Class T_Identifier T_Extends T_Identifier T_Implements IdentifierList '{' . FieldList '}'

    $default  reduce using rule 28 (FieldList)

    FieldList  go to state 77


State 71

   23 ClassDecl: T_Class T_Identifier T_Extends T_Identifier '{' FieldList '}' .

    $default  reduce using rule 23 (ClassDecl)


State 72

   24 ClassDecl: T_Class T_Identifier T_Implements IdentifierList '{' FieldList '}' .

    $default  reduce using rule 24 (ClassDecl)


State 73

   36 ProtoType: T_Void T_Identifier '(' Formals . ')' ';'

    ')'  shift, and go to state 78


State 74

   35 ProtoType: Type T_Identifier '(' Formals . ')' ';'

    ')'  shift, and go to state 79


State 75

   39 VarDeclList: VarDeclList VarDecl .

    $default  reduce using rule 39 (VarDeclList)


State 76

   37 StmtBlock: '{' VarDeclList StmtList . '}'
   41 StmtList: StmtList . Stmt

    T_Null            shift, and go to state 80
    T_This            shift, and go to state 81
    T_While           shift, and go to state 82
    T_For             shift, and go to state 83
    T_If              shift, and go to state 84
    T_Return          shift, and go to state 85
    T_Break           shift, and go to state 86
    T_New             shift, and go to state 87
    T_NewArray        shift, and go to state 88
    T_Print           shift, and go to state 89
    T_ReadInteger     shift, and go to state 90
    T_ReadLine        shift, and go to state 91
    T_Identifier      shift, and go to state 92
    T_StringConstant  shift, and go to state 93
    T_IntConstant     shift, and go to state 94
    T_DoubleConstant  shift, and go to state 95
    T_BoolConstant    shift, and go to state 96
    '('               shift, and go to state 97
    '{'               shift, and go to state 59
    '}'               shift, and go to state 98
    '!'               shift, and go to state 99
    '-'               shift, and go to state 100

    T_Null            [reduce using rule 50 (ExprBrack)]
    T_This            [reduce using rule 50 (ExprBrack)]
    T_While           [reduce using rule 50 (ExprBrack)]
    T_For             [reduce using rule 50 (ExprBrack)]
    T_If              [reduce using rule 50 (ExprBrack)]
    T_Return          [reduce using rule 50 (ExprBrack)]
    T_Break           [reduce using rule 50 (ExprBrack)]
    T_New             [reduce using rule 50 (ExprBrack)]
    T_NewArray        [reduce using rule 50 (ExprBrack)]
    T_Print           [reduce using rule 50 (ExprBrack)]
    T_ReadInteger     [reduce using rule 50 (ExprBrack)]
    T_ReadLine        [reduce using rule 50 (ExprBrack)]
    T_Identifier      [reduce using rule 50 (ExprBrack)]
    T_StringConstant  [reduce using rule 50 (ExprBrack)]
    T_IntConstant     [reduce using rule 50 (ExprBrack)]
    T_DoubleConstant  [reduce using rule 50 (ExprBrack)]
    T_BoolConstant    [reduce using rule 50 (ExprBrack)]
    '('               [reduce using rule 50 (ExprBrack)]
    '{'               [reduce using rule 50 (ExprBrack)]
    '}'               [reduce using rule 50 (ExprBrack)]
    '!'               [reduce using rule 50 (ExprBrack)]
    '-'               [reduce using rule 50 (ExprBrack)]

    StmtBlock        go to state 101
    Stmt             go to state 102
    ExprBrack        go to state 103
    IfStmt           go to state 104
    ForStmt          go to state 105
    WhileStmt        go to state 106
    ReturnStmt       go to state 107
    BreakStmt        go to state 108
    PrintStmt        go to state 109
    Expr             go to state 110
    LValue           go to state 111
    Constant         go to state 112
    Call             go to state 113
    AssignExpr       go to state 114
    LogicalExpr      go to state 115
    EqualityExpr     go to state 116
    ArithmeticExpr   go to state 117
    RelationalExpr   go to state 118
    ReadIntegerExpr  go to state 119
    ReadLineExpr     go to state 120
    NewExpr          go to state 121
    NewArrayExpr     go to state 122


State 77

   25 ClassDecl: T_Class T_Identifier T_Extends T_Identifier T_Implements IdentifierList '{' FieldList . '}'
   29 FieldList: FieldList . Field

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 123

    VarDecl  go to state 53
    Var      go to state 13
    Type     go to state 14
    FnDecl   go to state 54
    Field    go to state 55


State 78

   36 ProtoType: T_Void T_Identifier '(' Formals ')' . ';'

    ';'  shift, and go to state 124


State 79

   35 ProtoType: Type T_Identifier '(' Formals ')' . ';'

    ';'  shift, and go to state 125


State 80

   82 Constant: T_Null .

    $default  reduce using rule 82 (Constant)


State 81

   63 Expr: T_This .

    $default  reduce using rule 63 (Expr)


State 82

   55 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 126


State 83

   54 ForStmt: T_For . '(' ExprBrack ';' Expr ';' ExprBrack ')' Stmt

    '('  shift, and go to state 127


State 84

   52 IfStmt: T_If . '(' Expr ')' Stmt
   53       | T_If . '(' Expr ')' Stmt T_Else Stmt

    '('  shift, and go to state 128


State 85

   56 ReturnStmt: T_Return . ExprBrack ';'

    T_Null            shift, and go to state 80
    T_This            shift, and go to state 81
    T_New             shift, and go to state 87
    T_NewArray        shift, and go to state 88
    T_ReadInteger     shift, and go to state 90
    T_ReadLine        shift, and go to state 91
    T_Identifier      shift, and go to state 92
    T_StringConstant  shift, and go to state 93
    T_IntConstant     shift, and go to state 94
    T_DoubleConstant  shift, and go to state 95
    T_BoolConstant    shift, and go to state 96
    '('               shift, and go to state 97
    '!'               shift, and go to state 99
    '-'               shift, and go to state 100

    $default  reduce using rule 50 (ExprBrack)

    ExprBrack        go to state 129
    Expr             go to state 110
    LValue           go to state 111
    Constant         go to state 112
    Call             go to state 113
    AssignExpr       go to state 114
    LogicalExpr      go to state 115
    EqualityExpr     go to state 116
    ArithmeticExpr   go to state 117
    RelationalExpr   go to state 118
    ReadIntegerExpr  go to state 119
    ReadLineExpr     go to state 120
    NewExpr          go to state 121
    NewArrayExpr     go to state 122


State 86

   57 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 130


State 87

  105 NewExpr: T_New . '(' T_Identifier ')'

    '('  shift, and go to state 131


State 88

  106 NewArrayExpr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 132


State 89

   58 PrintStmt: T_Print . '(' ExprList ')' ';'

    '('  shift, and go to state 133


State 90

  103 ReadIntegerExpr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 134


State 91

  104 ReadLineExpr: T_ReadLine . '(' ')'

    '('  shift, and go to state 135


State 92

   75 LValue: T_Identifier .
   83 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 136

    '('       [reduce using rule 75 (LValue)]
    $default  reduce using rule 75 (LValue)


State 93

   81 Constant: T_StringConstant .

    $default  reduce using rule 81 (Constant)


State 94

   78 Constant: T_IntConstant .

    $default  reduce using rule 78 (Constant)


State 95

   79 Constant: T_DoubleConstant .

    $default  reduce using rule 79 (Constant)


State 96

   80 Constant: T_BoolConstant .

    $default  reduce using rule 80 (Constant)


State 97

   65 Expr: '(' . Expr ')'

    T_Null            shift, and go to state 80
    T_This            shift, and go to state 81
    T_New             shift, and go to state 87
    T_NewArray        shift, and go to state 88
    T_ReadInteger     shift, and go to state 90
    T_ReadLine        shift, and go to state 91
    T_Identifier      shift, and go to state 92
    T_StringConstant  shift, and go to state 93
    T_IntConstant     shift, and go to state 94
    T_DoubleConstant  shift, and go to state 95
    T_BoolConstant    shift, and go to state 96
    '('               shift, and go to state 97
    '!'               shift, and go to state 99
    '-'               shift, and go to state 100
